cmake_minimum_required(VERSION 3.21)
project(AtCoder)

set(CMAKE_CXX_STANDARD 17)

add_executable(AtCoder main.cpp)
add_executable(234_A ABC234/A.cpp)
add_executable(234_B ABC234/B.cpp)
add_executable(234_C ABC234/C.cpp)
add_executable(236_A ABC236/A.cpp)
add_executable(236_B ABC236/B.cpp)
add_executable(236_C ABC236/C.cpp)
add_executable(236_D ABC236/D.cpp)
add_executable(237_A ABC237/A.cpp)
add_executable(237_B ABC237/B.cpp)
add_executable(237_C ABC237/C.cpp)
add_executable(237_D ABC237/D.cpp)
add_executable(238_A ABC238/A.cpp)
add_executable(238_B ABC238/B.cpp)
add_executable(238_C ABC238/C.cpp)
add_executable(238_D ABC238/D.cpp)
add_executable(238_E ABC238/E.cpp)
add_executable(238_F ABC238/F.cpp)
add_executable(239_A ABC239/A.cpp)
add_executable(239_B ABC239/B.cpp)
add_executable(239_C ABC239/C.cpp)
add_executable(239_D ABC239/D.cpp)
add_executable(239_E ABC239/E.cpp)
add_executable(240_A ABC240/A.cpp)
add_executable(240_B ABC240/B.cpp)
add_executable(240_C ABC240/C.cpp)
add_executable(240_D ABC240/D.cpp)
add_executable(241_A ABC241/A.cpp)
add_executable(241_B ABC241/B.cpp)
add_executable(241_C ABC241/C.cpp)
add_executable(241_D ABC241/D.cpp)
add_executable(242_A ABC242/A.cpp)
add_executable(242_B ABC242/B.cpp)
add_executable(242_C ABC242/C.cpp)
add_executable(242_D ABC242/D.cpp)
add_executable(243_A ABC243/A.cpp)
add_executable(243_B ABC243/B.cpp)
add_executable(243_C ABC243/C.cpp)
add_executable(243_D ABC243/D.cpp)
add_executable(243_E ABC243/E.cpp)
add_executable(244_A ABC244/A.cpp)
add_executable(244_B ABC244/B.cpp)
add_executable(244_C ABC244/C.cpp)
add_executable(244_D ABC244/D.cpp)
add_executable(244_E ABC244/E.cpp)
add_executable(ATC001_A ATC001/A.cpp)
add_executable(ATC001_B ATC001/B.cpp)
add_executable(EDC_A EduDPContest/A.cpp)
add_executable(EDC_B EduDPContest/B.cpp)
add_executable(EDC_S EduDPContest/S.cpp)