cmake_minimum_required(VERSION 3.21)
project(AtCoder)

set(CMAKE_CXX_STANDARD 17)

include_directories("C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.30.30705/include/bits")

add_executable(AtCoder main.cpp)
add_executable(232_A ABC232/A.cpp)
add_executable(232_B ABC232/B.cpp)
add_executable(232_C ABC232/C.cpp)
add_executable(232_D ABC232/D.cpp)
add_executable(233_A ABC233/A.cpp)
add_executable(233_B ABC233/B.cpp)
add_executable(233_C ABC233/C.cpp)
add_executable(233_D ABC233/D.cpp)
add_executable(234_A ABC234/A.cpp)
add_executable(234_B ABC234/B.cpp)
add_executable(234_C ABC234/C.cpp)
add_executable(234_D ABC234/D.cpp)
add_executable(235_A ABC235/A.cpp)
add_executable(235_B ABC235/B.cpp)
add_executable(235_C ABC235/C.cpp)
add_executable(235_D ABC235/D.cpp)
add_executable(236_A ABC236/A.cpp)
add_executable(236_B ABC236/B.cpp)
add_executable(236_C ABC236/C.cpp)
add_executable(236_D ABC236/D.cpp)
add_executable(237_A ABC237/A.cpp)
add_executable(237_B ABC237/B.cpp)
add_executable(237_C ABC237/C.cpp)
add_executable(237_D ABC237/D.cpp)
add_executable(238_A ABC238/A.cpp)
add_executable(238_B ABC238/B.cpp)
add_executable(238_C ABC238/C.cpp)
add_executable(238_D ABC238/D.cpp)
add_executable(238_E ABC238/E.cpp)
add_executable(238_F ABC238/F.cpp)
add_executable(239_A ABC239/A.cpp)
add_executable(239_B ABC239/B.cpp)
add_executable(239_C ABC239/C.cpp)
add_executable(239_D ABC239/D.cpp)
add_executable(239_E ABC239/E.cpp)
add_executable(240_A ABC240/A.cpp)
add_executable(240_B ABC240/B.cpp)
add_executable(240_C ABC240/C.cpp)
add_executable(240_D ABC240/D.cpp)
add_executable(241_A ABC241/A.cpp)
add_executable(241_B ABC241/B.cpp)
add_executable(241_C ABC241/C.cpp)
add_executable(241_D ABC241/D.cpp)
add_executable(241_E ABC241/E.cpp)
add_executable(242_A ABC242/A.cpp)
add_executable(242_B ABC242/B.cpp)
add_executable(242_C ABC242/C.cpp)
add_executable(242_D ABC242/D.cpp)
add_executable(243_A ABC243/A.cpp)
add_executable(243_B ABC243/B.cpp)
add_executable(243_C ABC243/C.cpp)
add_executable(243_D ABC243/D.cpp)
add_executable(243_E ABC243/E.cpp)
add_executable(244_A ABC244/A.cpp)
add_executable(244_B ABC244/B.cpp)
add_executable(244_C ABC244/C.cpp)
add_executable(244_D ABC244/D.cpp)
add_executable(244_E ABC244/E.cpp)
add_executable(245_A ABC245/A.cpp)
add_executable(245_B ABC245/B.cpp)
add_executable(245_C ABC245/C.cpp)
add_executable(245_D ABC245/D.cpp)
add_executable(246_A ABC246/A.cpp)
add_executable(246_B ABC246/B.cpp)
add_executable(246_C ABC246/C.cpp)
add_executable(246_D ABC246/D.cpp)
add_executable(247_A ABC247/A.cpp)
add_executable(247_B ABC247/B.cpp)
add_executable(247_C ABC247/C.cpp)
add_executable(247_D ABC247/D.cpp)
add_executable(248_A ABC248/A.cpp)
add_executable(248_B ABC248/B.cpp)
add_executable(248_C ABC248/C.cpp)
add_executable(248_D ABC248/D.cpp)
add_executable(249_A ABC249/A.cpp)
add_executable(249_B ABC249/B.cpp)
add_executable(249_C ABC249/C.cpp)
add_executable(249_D ABC249/D.cpp)
add_executable(250_A ABC250/A.cpp)
add_executable(250_B ABC250/B.cpp)
add_executable(250_C ABC250/C.cpp)
add_executable(250_D ABC250/D.cpp)
add_executable(251_A ABC251/A.cpp)
add_executable(251_B ABC251/B.cpp)
add_executable(251_C ABC251/C.cpp)
add_executable(251_D ABC251/D.cpp)
add_executable(252_A ABC252/A.cpp)
add_executable(252_B ABC252/B.cpp)
add_executable(252_C ABC252/C.cpp)
add_executable(252_D ABC252/D.cpp)
add_executable(253_A ABC253/A.cpp)
add_executable(253_B ABC253/B.cpp)
add_executable(253_C ABC253/C.cpp)
add_executable(253_D ABC253/D.cpp)
add_executable(253_E ABC253/E.cpp)
add_executable(254_A ABC254/A.cpp)
add_executable(254_B ABC254/B.cpp)
add_executable(254_C ABC254/C.cpp)
add_executable(254_D ABC254/D.cpp)
add_executable(255_A ABC255/A.cpp)
add_executable(255_B ABC255/B.cpp)
add_executable(255_C ABC255/C.cpp)
add_executable(255_D ABC255/D.cpp)
add_executable(255_E ABC255/E.cpp)
add_executable(256_A ABC256/A.cpp)
add_executable(256_B ABC256/B.cpp)
add_executable(256_C ABC256/C.cpp)
add_executable(256_D ABC256/D.cpp)
add_executable(257_A ABC257/A.cpp)
add_executable(257_B ABC257/B.cpp)
add_executable(257_C ABC257/C.cpp)
add_executable(257_D ABC257/D.cpp)
add_executable(258_A ABC258/A.cpp)
add_executable(258_B ABC258/B.cpp)
add_executable(258_C ABC258/C.cpp)
add_executable(258_D ABC258/D.cpp)
add_executable(258_E ABC258/E.cpp)
add_executable(259_A ABC259/A.cpp)
add_executable(259_B ABC259/B.cpp)
add_executable(259_C ABC259/C.cpp)
add_executable(259_D ABC259/D.cpp)
add_executable(260_A ABC260/A.cpp)
add_executable(260_B ABC260/B.cpp)
add_executable(260_C ABC260/C.cpp)
add_executable(260_D ABC260/D.cpp)
add_executable(261_A ABC261/A.cpp)
add_executable(261_B ABC261/B.cpp)
add_executable(261_C ABC261/C.cpp)
add_executable(261_D ABC261/D.cpp)
add_executable(262_A ABC262/A.cpp)
add_executable(262_B ABC262/B.cpp)
add_executable(262_C ABC262/C.cpp)
add_executable(262_D ABC262/D.cpp)
add_executable(263_A ABC263/A.cpp)
add_executable(263_B ABC263/B.cpp)
add_executable(263_C ABC263/C.cpp)
add_executable(263_D ABC263/D.cpp)
add_executable(264_A ABC264/A.cpp)
add_executable(264_B ABC264/B.cpp)
add_executable(264_C ABC264/C.cpp)
add_executable(264_D ABC264/D.cpp)
add_executable(264_E ABC264/E.cpp)
add_executable(ATC001_A ATC001/A.cpp)
add_executable(ATC001_B ATC001/B.cpp)
add_executable(ARC146_A ARC146/A.cpp)
add_executable(ARC146_B ARC146/B.cpp)
add_executable(ARC146_C ARC146/C.cpp)
add_executable(ARC146_D ARC146/D.cpp)
add_executable(EDC_A EduDPContest/A.cpp)
add_executable(EDC_B EduDPContest/B.cpp)
add_executable(EDC_C EduDPContest/C.cpp)
add_executable(EDC_D EduDPContest/D.cpp)
add_executable(EDC_E EduDPContest/E.cpp)
add_executable(EDC_F EduDPContest/F.cpp)
add_executable(EDC_S EduDPContest/S.cpp)